--- a/src/pages/platformAmbient/Trade/TradeCharts/TradeChartsComponents/CurveDepth.module.css
+++ b/src/pages/platformAmbient/Trade/TradeCharts/TradeChartsComponents/CurveDepth.module.css
@@ -42,64 +42,7 @@
     color: var(--text2);
 }
 
-.curve_depth_mobile_button {
-    background: var(--dark2);
-    color: var(--text1);
-    padding: 2px 8px;
-    border-radius: var(--border-radius);
-    border: 1px solid var(--dark3);
-    text-transform: capitalize;
-    font-size: 12px;
-}
-
-.dropdown_menu {
-    width: 100%;
-
+.mobile_container{
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    position: relative;
-    cursor: pointer;
-}
 
-.dropdown_wrapper,
-.dropdown_wrapper_active {
-    padding: 8px;
-
-    position: absolute;
-    background: var(--dark2);
-
-    border-radius: var(--border-radius);
-    box-shadow: 10px 35px 20px rgba(0, 0, 0, 0.5);
-    transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-
-    z-index: 2;
-
-    display: flex;
-}
-.dropdown_wrapper_active:after {
-    content: '';
-    position: absolute;
-    height: 0;
-    width: 0;
-    left: 98%;
-    top: 0;
-    border: 10px solid transparent;
-    border-left: 10px solid var(--dark2);
-}
-
-.dropdown_wrapper {
-    top: 3px;
-
-    opacity: 0;
-    pointer-events: none;
-    left: -30px;
-}
-
-.dropdown_wrapper_active {
-    opacity: 1;
-    /* top: 10px; */
-    pointer-events: auto;
-    left: -30px;
-    top: 30px;
 }
