--- a/src/pages/common/CSSDebug/CSSDebug.module.css
+++ b/src/pages/common/CSSDebug/CSSDebug.module.css
@@ -2,5 +2,5 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly
+    justify-content: space-evenly;
 }
