add color preview box to `ColorToggle.tsx` file

--- a/src/pages/common/CSSDebug/ColorToggle.module.css
+++ b/src/pages/common/CSSDebug/ColorToggle.module.css
@@ -6,3 +6,15 @@
     padding: 4px;
     outline: 1px solid yellow;
 }
+
+.color_toggle > header {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.color_box {
+    height: 100%;
+    aspect-ratio: 1;
+}
