stub up preview text area in `CSSDebug.tsx` file

--- a/src/pages/common/CSSDebug/CSSDebug.module.css
+++ b/src/pages/common/CSSDebug/CSSDebug.module.css
@@ -15,3 +15,17 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
+
+.previews {
+    display: flex;
+    flex-direction: column;
+    border: 2px solid green;
+}
+
+.previews > input {
+    width: 100%;
+}
+
+.previews > section {
+    margin-top: 8px;
+}
