fix portfolio page on medium devices

--- a/src/pages/platformAmbient/Portfolio/Portfolio.module.css
+++ b/src/pages/platformAmbient/Portfolio/Portfolio.module.css
@@ -8,9 +8,6 @@
     gap: 16px;
 }
 
-
-
-
 .portfolio_tabs_container {
     width: 100%;
     display: grid;
@@ -18,14 +15,36 @@
     overflow: hidden;
     flex: 1;
   }
+
+    .portfolio_tabs_container.fullLayoutContainer {
+      grid-template-columns: auto 36px;
+      column-gap: 16px;
+    }
+  
+    .portfolio_tabs_container:not(.fullLayoutContainer) {
+      grid-template-columns: auto 380px;
+      gap: 1rem;
+    }
+  
+    .portfolio_tabs_container:not(.active) {
+      grid-template-columns: auto;
+      column-gap: 16px;
+    }
+  
+    .portfolio_tabs_container.active.fullLayoutContainer {
+      grid-template-columns: auto 36px;
+      column-gap: 16px;
+    }
+  
+    .portfolio_tabs_container.active:not(.fullLayoutContainer) {
+      grid-template-columns: auto 380px;
+      gap: 1rem;
+    }
+  
   
 
 
-  
 
-  @media (min-width: 400px) {
-
-  }
   @media (min-width: 1200px) {
     .portfolio_tabs_container.fullLayoutContainer {
       grid-template-columns: auto 36px;
