--- a/src/components/Portfolio/PortfolioBanner/PortfolioBanner.module.css
+++ b/src/components/Portfolio/PortfolioBanner/PortfolioBanner.module.css
@@ -92,6 +92,7 @@
         background: var(--dark1);
         padding: 1rem;
         border: none;
+        overflow: hidden;
     }
     .portfolio_banner_rectangle_content {
         justify-content: flex-end;
