--- a/src/pages/platformFuta/SwapFuta/SwapFuta.module.css
+++ b/src/pages/platformFuta/SwapFuta/SwapFuta.module.css
@@ -44,12 +44,41 @@
     max-height: 100%;
 }
 
-/* @media (max-width: 800px) {
-    .mainSection {
-        display: flex;
-        flex-direction: column;
-    }
-} */
+
+.mobile_container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    gap: 1rem;
+
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 0 1rem;
+}
+.mobile_tabs_container {
+    padding: 0 1rem;
+
+    display: grid;
+   
+    align-items: center;
+    gap: 8px;
+}
+.mobile_tabs_container button {
+    width: 100%;
+    background: var(--dark3);
+    outline: none;
+    border: 1px solid transparent;
+    color: var(--text2);
+    padding: 2px 0;
+    border-radius: 25px;
+    font-size: 12px;
+}
+
+.activeTab {
+    border: 1px solid var(--accent1);
+    color: var(--accent1);
+}
 
 @media (max-width: 600px) {
     .mainSection {
