--- a/src/components/Portfolio/PortfolioBanner/PortfolioBannerAccount/PortfolioBannerAccount.module.css
+++ b/src/components/Portfolio/PortfolioBanner/PortfolioBannerAccount/PortfolioBannerAccount.module.css
@@ -16,6 +16,13 @@
         width: 65px;
     }
 
+    .banner_settings_container{
+        background: red;
+      
+        z-index: 999;
+        position: absolute;
+    }
+
     .deposit_button{
         font-size: 12px;
         outline: none;
