--- a/src/pages/platformFuta/SwapFuta/SwapFuta.module.css
+++ b/src/pages/platformFuta/SwapFuta/SwapFuta.module.css
@@ -1,11 +1,10 @@
 .mainSection {
     display: grid;
     gap: 8px;
-    grid-template-columns: auto 4px  390px;
+    grid-template-columns: auto 4px 390px;
     padding: 0 8px;
     height: 100%;
     height: calc(100dvh - 75px);
-   
 }
 
 .mobileMainSection {
@@ -18,7 +17,7 @@
     /* height: calc(100dvh - 75px);  */
 }
 
-.chartSection{
+.chartSection {
     /* display: flex;
     justify-content: center;
     align-items: center; */
@@ -27,40 +26,40 @@
     height: calc(100dvh - 75px);
 
     background: var(--dark3);
-   
 
-     background: linear-gradient(
+    background: linear-gradient(
         90deg,
         rgba(7, 7, 7, 0.1) 25%,
         rgba(52, 45, 45, 0.2) 50%,
         rgba(55, 53, 53, 0.1) 75%
     );
     background-size: 200% 100%;
-   
 }
 
-.chartSection img{
+.chartSection img {
     max-width: 100%;
     max-height: 100%;
 }
 
-
-.mobile_container {
+.chart_mobile_container .mobile_container {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100%;
     gap: 1rem;
+}
 
+.mobile_container {
     max-width: 600px;
     margin: 0 auto;
     padding: 0 1rem;
 }
+
 .mobile_tabs_container {
     padding: 0 1rem;
 
     display: grid;
-   
+
     align-items: center;
     gap: 8px;
 }
@@ -87,7 +86,7 @@
         gap: 4px;
     }
 
-    .chartSection{
+    .chartSection {
         height: 130px;
     }
 }
@@ -101,7 +100,7 @@
     }
 }
 
-.comments_wrapper{
+.comments_wrapper {
     /* position: absolute; */
     width: 100%;
     display: block;
