create pwa hook and refactor explore to unhide last elements

--- a/src/components/Global/LevelsCard/LevelsCard.module.css
+++ b/src/components/Global/LevelsCard/LevelsCard.module.css
@@ -110,7 +110,10 @@ max-width: 100%;
         
     }
 
-
+.mobile_dropdown{
+    width: 100%;
+    justify-content: space-between;
+}
 
 @media (min-width: 768px) {
     
