--- a/src/components/Global/Explore/TopPools/TopPools.module.css
+++ b/src/components/Global/Explore/TopPools/TopPools.module.css
@@ -12,12 +12,14 @@
     overflow-x: auto;
     position: relative;
 
-    height: calc(100vh - 64px);
+    height: calc(100dvh - 64px);
     overflow-y: hidden;
     background: var(--dark1);
     border: 1px solid var(--dark3);
     border-radius: 4px;
 }
+
+
 
 .headerContainer {
     box-sizing: border-box;
