--- a/src/components/Portfolio/ExchangeBalance/ExchangeBalance.module.css
+++ b/src/components/Portfolio/ExchangeBalance/ExchangeBalance.module.css
@@ -55,6 +55,12 @@
     border-radius: var(--border-radius);
     background: var(--dark1);
 }
+@media only screen and (max-width: 768px) {
+    .portfolio_control_container{
+        display: none;
+    }
+
+}
 @media only screen and (min-width: 1280px) {
     .portfolio_motion_container {
         max-width: 400px;
