add dragable to modals

--- a/src/components/Global/Modal/Modal.module.css
+++ b/src/components/Global/Modal/Modal.module.css
@@ -78,6 +78,13 @@
 
     /* min-height: 250px; */
 }
+.drag_handle {
+    width: 40px;
+    height: 5px;
+    background-color: var(--accent1);
+    border-radius: 2.5px;
+    margin: 0 auto;
+}
 
 .modal_header svg:hover {
     color: var(--text1);
