--- a/src/App/App.css
+++ b/src/App/App.css
@@ -350,7 +350,10 @@ input[type='number'] {
         position: fixed;
         top: 56px;
         bottom: 64px;
+        left: 0;
+        right: 0;
         z-index: 2;
+        pointer-events: none;
         /* display: none; */
     }
 }
