--- a/src/App/components/PageHeader/PageHeader.module.css
+++ b/src/App/components/PageHeader/PageHeader.module.css
@@ -13,3 +13,150 @@
     flex-direction: column;
     background: red;
 }
+.primaryHeader {
+    width: 100%;
+    height: 56px;
+    background: var(--dark1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid var(--navbar-border);
+    padding: 0 1rem;
+}
+.primaryNavigation {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2rem;
+}
+.navigationLink {
+    text-decoration: none;
+    position: relative;
+    padding-bottom: 0.2rem;
+    font-family: var(--font-family);
+    font-weight: 300;
+    font-size: var(--header2-size);
+    line-height: var(--header2-lh);
+    letter-spacing: -0.02em;
+    color: var(--text2);
+    transition: opacity var(--animation-speed) ease-in-out;
+    outline: 1px solid transparent;
+}
+
+.navigationLink:hover,
+.navigationLink:focus-visible {
+    color: var(--text1);
+}
+
+.navigationLink:focus-visible {
+    border: var(--grey-light-border);
+}
+
+.navigationLink:hover:after,
+.navigationLink:focus-visible:after {
+    opacity: 1;
+}
+
+/* Separate class for the active state */
+.activeNavigationLink {
+    color: var(--text1);
+}
+
+.activeNavigationLink:focus-visible {
+    border: var(--grey-light-border);
+}
+
+
+.underlineMotion{
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    right: 0;
+    height: 1px;
+    background: var(--text1);
+    box-shadow: var(--glow-light-box-shadow);
+}
+
+.tradeNowDiv{
+    width: 380px;
+    padding: 0 1rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.logoContainer {
+    display: inline-block;
+    flex-direction: row;
+    gap: 8px;
+    align-items: center;
+}
+
+.logoContainer:focus-visible img {
+    box-shadow: var(--glow-light-box-shadow);
+}
+.logoText{
+    max-width: 70%;
+    max-height: 70%;
+}
+
+
+
+
+@media (max-width: 800px) {
+    .primaryNavigation {
+        display: none;
+        position: fixed;
+        z-index: 1000;
+        inset: 0 0 0 30%;
+        padding: min(30vh, 10rem) 2em;
+        transform: translateX(100%);
+        transition: transform var(--animation-speed) ease-in-out;
+        flex-direction: column;
+        backdrop-filter: blur(1rem);
+        background: rgba(23, 29, 39, 0.5);
+        backdrop-filter: blur(13px);
+        -webkit-backdrop-filter: blur(13px);
+        border-radius: 10px;
+        font-size: calc(var(--header2-size) + 0.5rem);
+        line-height: calc(var(--header2-lh) + 0.5rem);
+    }
+
+    
+}
+
+@media only screen and (min-width: 800px) {
+    .primaryHeader {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        padding: 0 16px;
+    }
+    .logoContainer img:nth-of-type(1) {
+        margin: 0 4px;
+    }
+}
+
+@media (max-width: 1200px) {
+    .logoContainer img:nth-of-type(2) {
+        display: block;
+        margin: 0 4px;
+    }
+}
+
+@media only screen and (min-width: 1180px) {
+    .logoContainer {
+        vertical-align: middle;
+        justify-content: flex-start;
+    }
+    .rightSide {
+        vertical-align: middle;
+        display: flex;
+        justify-content: flex-end;
+    }
+    .primaryNavigation {
+        vertical-align: middle;
+        justify-content: center;
+    }
+}
+
+
+
