--- a/src/components/Global/DollarizationModalControl/DollarizationModalControl.module.css
+++ b/src/components/Global/DollarizationModalControl/DollarizationModalControl.module.css
@@ -9,3 +9,11 @@
     line-height: var(--body-lh);
    
 }
+
+@media only screen and (min-width: 768px) {
+
+.main_container{
+    padding: 0 1rem;
+}
+
+}
