refactor mobile header to match figma and change activity indicator to css modules

--- a/src/App/components/PageHeader/NavItem/NavItem.module.css
+++ b/src/App/components/PageHeader/NavItem/NavItem.module.css
@@ -37,3 +37,13 @@
     width: 20px;
     height: 20px;
 }
+
+@media only screen and (max-width: 768px) {
+    .navItemIconButton {
+
+border-radius: 50%;
+width: 35px;
+height: 35px;
+    }
+
+}
