--- a/src/components/Global/FooterNav/FooterNav.module.css
+++ b/src/components/Global/FooterNav/FooterNav.module.css
@@ -4,20 +4,17 @@
     left: 0;
     right: 0;
     width: 100%;
-
     display: flex;
     justify-content: space-around;
     align-items: center;
     background-color: var(--dark1);
-    /* padding: 15px 10px; */
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
+    border-top-left-radius: 32px;
+    border-top-right-radius: 32px;
     box-shadow: 0px 5px 40px rgba(0, 0, 0, 0.8);
     height: 56px;
     z-index: 100;
     width: 98%;
     margin: 0 auto;
-    padding: 10px;
     border-top: 1px solid var(--dark3);
 }
 
@@ -28,15 +25,17 @@
     align-items: center;
     cursor: pointer !important;
     transition: all 0.2s ease-out;
-    padding: 8px 10px;
 }
 
 .link {
     display: flex;
+    flex-direction: column;
     align-items: center;
     text-decoration: none;
     color: inherit;
     gap: 4px;
+    font-size: var(--body-size);
+    line-height: var(--body-lh);
 }
 
 .icon {
@@ -45,9 +44,10 @@
 }
 
 .active {
-    background: var(--dark2);
-    border-radius: 30px;
-    /* padding: 10px; */
+   
     gap: 4px;
     color: var(--accent1);
+}
+.navText{
+    display: flex;
 }
