--- a/src/components/Global/TokenSelectContainer/SoloTokenSelectModal.module.css
+++ b/src/components/Global/TokenSelectContainer/SoloTokenSelectModal.module.css
@@ -17,17 +17,6 @@
     color: var(--text2);
 }
 
-.container input {
-    width: 100%;
-    height: 30px;
-    background: var(--dark2);
-    outline: none;
-    border: none;
-    padding: 0 4px;
-    margin-bottom: 8px;
-    border-radius: var(--border-radius);
-}
-
 .scrollable_container {
     max-height: 70vh;
     overflow-y: scroll;
@@ -43,6 +32,7 @@
     align-items: center;
 }
 
+/* holds the search <input> field and CLEAR button */
 .input_control_container {
     display: flex;
     flex-direction: row;
@@ -50,7 +40,20 @@
     gap: 4px;
 }
 
-.input_control_container button {
+/* search input field */
+.input_control_container > input {
+    width: 100%;
+    height: 30px;
+    background: var(--dark2);
+    outline: none;
+    border: none;
+    padding: 0 4px;
+    margin-bottom: 8px;
+    border-radius: var(--border-radius);
+}
+
+/* button to clear input from field */
+.input_control_container > button {
     background: transparent;
     padding: 6px 0;
     color: var(--text2);
