--- a/src/components/Global/TokenSelectContainer/SoloTokenSelectModal.module.css
+++ b/src/components/Global/TokenSelectContainer/SoloTokenSelectModal.module.css
@@ -52,6 +52,11 @@
     border-radius: var(--border-radius);
 }
 
+.input_control_container > input::placeholder {
+    text-align: center;
+    font-size: 12px;
+}
+
 /* button to clear input from field */
 .input_control_container > button {
     background: transparent;
