--- a/src/components/Portfolio/PortfolioBanner/PortfolioBannerAccount/PortfolioBannerAccount.module.css
+++ b/src/components/Portfolio/PortfolioBanner/PortfolioBannerAccount/PortfolioBannerAccount.module.css
@@ -17,6 +17,14 @@
     outline: 3px solid green;
 }
 
+.address_detail {
+    font-weight: 300;
+    font-size: var(--body-size);
+    gap: 8px;
+    cursor: pointer;
+    color: var(--text1);
+}
+
 .deposit_button {
     font-size: 12px;
     outline: none;
