--- a/src/components/Portfolio/PortfolioBanner/PortfolioBannerAccount/PortfolioBannerAccount.module.css
+++ b/src/components/Portfolio/PortfolioBanner/PortfolioBannerAccount/PortfolioBannerAccount.module.css
@@ -7,7 +7,7 @@
     backdrop-filter: blur(2px);
 }
 
-.portfolio_settings {
+.jazzicon {
     display: flex;
     flex-direction: column;
     justify-content: center;
