simplify JSX foruser-visible content in `PortfolioBannerAccount.tsx` file

--- a/src/components/Portfolio/PortfolioBanner/PortfolioBannerAccount/PortfolioBannerAccount.module.css
+++ b/src/components/Portfolio/PortfolioBanner/PortfolioBannerAccount/PortfolioBannerAccount.module.css
@@ -7,6 +7,14 @@
     backdrop-filter: blur(2px);
 }
 
+.user_facing_content {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    z-index: 1;
+    gap: 22px;
+}
+
 .jazzicon {
     display: flex;
     flex-direction: column;
