--- a/src/pages/platformAmbient/Trade/TradeCharts/TradeCharts.module.css
+++ b/src/pages/platformAmbient/Trade/TradeCharts/TradeCharts.module.css
@@ -33,12 +33,9 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
-
     width: 100%;
     min-height: 300px;
-    padding: 8px;
-    /* justify-content: flex-start;
-    align-items: start; */
+    padding: 8px 20px;
 }
 
 .mobile_settings_row {
