--- a/src/App/App.css
+++ b/src/App/App.css
@@ -231,40 +231,7 @@ input[type='number'] {
     appearance: textfield;
     -moz-appearance: textfield;
 }
-.custom_scroll_ambient {
-    overflow-y: auto !important;
-   
-}
-.custom_scroll_ambient::-webkit-scrollbar,
-.content-container::-webkit-scrollbar {
-    width: 8px !important; /* Adjust the width as needed */
-}
-.custom_scroll_ambient::-webkit-scrollbar-thumb,
-.content-container::-webkit-scrollbar-thumb {
-    border: 2px solid transparent !important; /* Space for the border */
-    background-clip: padding-box !important; /* Create space for the border */
-    border-radius: 8px !important; /* Adjust the border radius as needed */
-    background-image: linear-gradient(#06060c, #06060c),
-        linear-gradient(
-            0deg,
-            var(--accent1) 0%,
-            var(--accent5) 49.48%,
-            var(--accent1) 100%
-        ) !important;
-    background-origin: border-box !important;
-    background-clip: content-box, border-box !important; /* Clip the border to show gradient */
-    min-height: 50px !important; /* Set the minimum height for the scrollbar thumb */;
-   
-    
-    
-}
-.custom_scroll_ambient::-webkit-scrollbar-track,
-.content-container::-webkit-scrollbar-track {
-    background: #06060c !important; /* Background color of the scrollbar track */
-    border-radius: 8px !important; /* Adjust the border radius as needed */
-    padding: 2px !important; /* Add padding to the track */;
-  
-}
+
 /* -----------------------FUTA------------ */
 
 .futa_main {
@@ -356,6 +323,29 @@ input[type='number'] {
         pointer-events: none;
         /* display: none; */
     }
+
+    .custom_scroll_ambient::-webkit-scrollbar {
+        width: 5px !important;
+      }
+      
+ 
+      /* Handle */
+      .custom_scroll_ambient::-webkit-scrollbar-thumb {
+        background: 
+        linear-gradient(
+            0deg,
+            var(--accent1) 0%,
+            var(--accent5) 49.48%,
+            var(--accent1) 100%
+        ) !important;
+      }
+
+      /* .custom_scroll_ambient{
+        scrollbar-width: thin;
+scrollbar-color: transparent;
+      } */
+
+
 }
 
 @media only screen and (min-width: 1280px) {
