--- a/src/pages/platformAmbient/Explore/Explore.module.css
+++ b/src/pages/platformAmbient/Explore/Explore.module.css
@@ -1,6 +1,6 @@
 .main_container {
     background: var(--dark2);
-    padding: 16px;
+    padding: 8px;
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -56,7 +56,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--dark3);
+    background-color: var(--dark2);
     border-radius: var(--border-radius);
     border: none;
     outline: none;
@@ -73,7 +73,7 @@
     background: var(--dark2, #12121a);
 
     width: 300px;
-    border: 1px solid var(--dark3);
+   
 }
 
 .input_wrapper {
@@ -222,6 +222,10 @@
 }
 
 @media only screen and (min-width: 768px) {
+
+    .main_container{
+        padding: 16px;
+    }
     .gridContainer {
         gap: 8px;
     }
