--- a/src/pages/platformAmbient/Trade/TradeMobile.module.css
+++ b/src/pages/platformAmbient/Trade/TradeMobile.module.css
@@ -22,6 +22,8 @@
     gap: 8px;
 
     height: 30px;
+    z-index: 2;
+    background-color: var(--dark1);
     
 }
 .mobile_tabs_container button {
@@ -46,6 +48,8 @@
     align-items: center;
     justify-content: space-between;
     padding: 8px 1rem;
+    background: var(--dark1);
+    z-index: 2;
 
    
     
