--- a/src/components/Global/Modal/Modal.module.css
+++ b/src/components/Global/Modal/Modal.module.css
@@ -21,10 +21,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.7);
-    z-index: 99999;
+    z-index: 99999999;
+
+    background: rgba(1, 0, 16, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(15px);
+    border-radius: var(--border-radius);
     transition: var(--transition);
 }
 
@@ -32,22 +35,21 @@
 .modal_body {
     border: solid 1px;
     border-color: var(--accent1);
-    background-image: linear-gradient(
-            rgba(189, 27, 27, 0),
-            rgba(255, 255, 255, 0)
-        ),
-        linear-gradient(101deg, var(--accent1), var(--accent1), var(--accent1));
     background-origin: border-box;
     background-clip: content-box, border-box;
-    box-shadow: 2px 1000px 1px var(--dark1) inset;
+    box-shadow: 2px 2000px 1px var(--dark1) inset;
     transition: box-shadow var(--animation-speed) ease-in-out;
+
     height: fit-content;
     min-height: 200px;
     min-width: 300px;
     border-radius: var(--border-radius);
     overflow: hidden;
     position: relative;
+    /* max-height: 80vh; */
     color: var(--text1);
+    /* min-height: 80vh; */
+
 }
 
 .no_background_modal {
@@ -77,7 +79,6 @@
 
 /* Modal content */
 .modal_content {
-    padding: 20px;
     border-radius: var(--border-radius);
 }
 
