--- a/src/components/Global/TokenSelectContainer/SoloTokenSelectModal.module.css
+++ b/src/components/Global/TokenSelectContainer/SoloTokenSelectModal.module.css
@@ -1,10 +1,15 @@
 .container {
     height: 70vh;
-    overflow-y: scroll;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     padding: 1rem;
     border-radius: var(--border-radius);
+
+
+    
+
+    
 }
 
 .container::-webkit-scrollbar {
@@ -15,6 +20,10 @@
     font-size: var(--body-size);
     line-height: var(--header2-lh);
     color: var(--text2);
+}
+.scrollContainer{
+    height: 100%;
+    overflow-y: auto;
 }
 
 .scrollable_container {
@@ -38,6 +47,8 @@
     flex-direction: row;
     align-items: center;
     gap: 4px;
+
+
 }
 
 /* search input field */
