--- a/src/components/Global/TransactionDetails/TransactionDetailsSimplify/TransactionDetailsSimplify.module.css
+++ b/src/components/Global/TransactionDetails/TransactionDetailsSimplify/TransactionDetailsSimplify.module.css
@@ -7,17 +7,19 @@
     -moz-animation: fadeIn ease 1s;
     -o-animation: fadeIn ease 1s;
     -ms-animation: fadeIn ease 1s;
+    border: 1px solid var(--dark3);
+  
 }
 
 .info_content {
     width: 100%;
     height: 100%;
     border-radius: var(--border-radius);
-    border: 1px solid var(--dark3);
     backdrop-filter: blur(10px);
 
     padding: 1rem;
 }
+
 
 .link_row {
     display: flex;
@@ -25,6 +27,17 @@
     align-items: center;
     gap: 4px;
     cursor: default;
+}
+@media (max-width: 768px) {
+.info_content{
+    padding: 0;
+}
+
+
+.info_content > div:nth-child(even) {
+    background-color: var(--dark2)
+}
+
 }
 
 @keyframes fadeIn {
