--- a/src/components/Portfolio/PortfolioBanner/PortfolioBannerAccount/PortfolioBannerAccount.module.css
+++ b/src/components/Portfolio/PortfolioBanner/PortfolioBannerAccount/PortfolioBannerAccount.module.css
@@ -53,7 +53,19 @@
     color: var(--text1);
 }
 
-.deposit_button {
+.button_bank {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.button_bank > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.button_bank button {
     font-size: 12px;
     outline: none;
     background: transparent;
@@ -61,7 +73,7 @@
     color: var(--accent1);
     padding: 4px;
     border-radius: 20px;
-    min-width: 120px;
+    /* min-width: 120px; */
 }
 
 @media only screen and (max-width: 768px) {
