--- a/src/components/Global/TransactionDetails/TransactionDetailsModal.module.css
+++ b/src/components/Global/TransactionDetails/TransactionDetailsModal.module.css
@@ -197,7 +197,7 @@
 .graph_section_mobile {
     width: 100%;
     height: 100%; /* Ensures full height usage */
-    min-height: 200px; /* Ensures it doesn't collapse */
+    height: 130px; /* Ensures it doesn't collapse */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -218,10 +218,10 @@
         
     }
 
-    .graph_section_mobile {
+    /* .graph_section_mobile {
        min-height: 0;
        height: 150px;
 
       
-    }
+    } */
 }
