refactor order and limit detail cards and update folder structure for all details

--- a/src/components/Global/DetailModals/OrderDetails/OrderDetailsSimplify/OrderDetailsSimplify.module.css
+++ b/src/components/Global/DetailModals/OrderDetails/OrderDetailsSimplify/OrderDetailsSimplify.module.css
@@ -98,3 +98,16 @@
         opacity: 1;
     }
 }
+
+
+@media (max-width: 768px) {
+    .main_container{
+      padding: 0; 
+    }
+
+    .main_container section{
+        overflow-y: auto;
+    }
+
+
+}
