--- a/src/components/Global/DetailModals/RangeDetails/RangeDetailsSimplify/RangeDetailsSimplify.module.css
+++ b/src/components/Global/DetailModals/RangeDetails/RangeDetailsSimplify/RangeDetailsSimplify.module.css
@@ -40,8 +40,19 @@
     align-items: center;
     gap: 4px;
 }
+@media (max-width: 768px) {
+    .main_container{
+      padding: 0; 
+    }
 
-@media only screen and (min-width: 768px) {
+    .main_container section{
+        overflow-y: auto;
+    }
+
+
+}
+
+@media only screen and (min-width: 767px) {
     .main_container {
         display: grid;
         grid-template-columns: 1fr 1fr;
