--- a/src/components/Global/LevelsCard/LevelsCard.module.css
+++ b/src/components/Global/LevelsCard/LevelsCard.module.css
@@ -30,15 +30,15 @@ border-radius: 4px;
 
 .user_image{
     width: 50px;
-height: 50px;
+    height: 50px;
 
-border-radius: 50%;
+    border-radius: 50%;
 
 }
 .user_image img{
     max-height: 100%;
-max-width: 100%;
-    object-fit: contain;
+    max-width: 100%;
+    /* object-fit: contain; */
     border-radius: 50%;
 }
 
