create new yellow color set for `WarningBox.tsx` file

--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,18 @@
         rgba(241, 177, 98, 0.1) 100%
     );
 
+    /**
+    *   color scheme yellow is not from Figma, I made it myself for demo
+    *   ... needs, if we create a "yellow" color this can be updated and
+    *   ... this note deleted (check for actual consumption first)
+    */
+    --yellow: #FFFF00;
+    --yellow-background: radial-gradient(
+        50% 50% at 50% 50%,
+        rgba(255, 255, 0, 0.1) 0%,
+        rgba(255, 255, 0, 0.1) 100%
+    );
+
     /* border */
     --color-border: 1px solid var(--accent1);
     --border: var(--dark2);
