--- a/src/components/Global/TokenSelectContainer/SoloTokenSelectModal.module.css
+++ b/src/components/Global/TokenSelectContainer/SoloTokenSelectModal.module.css
@@ -1,15 +1,10 @@
 .container {
     height: 70vh;
-    overflow: hidden;
+    overflow-y: scroll;
     display: flex;
     flex-direction: column;
     padding: 1rem;
     border-radius: var(--border-radius);
-
-
-    
-
-    
 }
 
 .container::-webkit-scrollbar {
@@ -20,10 +15,6 @@
     font-size: var(--body-size);
     line-height: var(--header2-lh);
     color: var(--text2);
-}
-.scrollContainer{
-    height: 100%;
-    overflow-y: auto;
 }
 
 .scrollable_container {
@@ -47,8 +38,6 @@
     flex-direction: row;
     align-items: center;
     gap: 4px;
-
-
 }
 
 /* search input field */
