--- a/src/components/Trade/TradeTabs/TableRowsInfiniteScroll.module.css
+++ b/src/components/Trade/TradeTabs/TableRowsInfiniteScroll.module.css
@@ -74,7 +74,7 @@
 .data_fetching_bar2{
     display: block;
     width: 10%;
-    height: 2px;
+    height: .2rem;
     position: absolute;
     bottom: 0;
     left: -20%;
